# ATLFormulaCheckerC

./: .gitignore  AtlModel.cpp  AtlModel.h  BridgeModel.cpp  BridgeModel.h  BridgeModelAbstrTestSuite.cpp  BridgeModelAbstrTestSuite.h  BridgeModelLowerAbstr.cpp  BridgeModelLowerAbstr.h  BridgeModelTestSuite.cpp  BridgeModelTestSuite.h  BridgeModelUpperAbstr.cpp  BridgeModelUpperAbstr.h  CMakeLists.txt  DisjointUnion.cpp  DisjointUnion.h  README.md  SeleneModel.cpp  SeleneModel.h  Selene_2_1_2.txt  Selene_2_1_2_False_1_dump.txt  Selene_2_1_2_False_3_dump.txt  Selene_2_1_2_False_dump.txt  Selene_2_1_2_True_4_dump.txt  Selene_2_1_2_True_dump.txt  Selene_2_2_2_False_4_dump.txt  Selene_2_2_2_True_1_dump.txt  Selene_2_2_2_True_3_dump.txt  Selene_model_1_1_1_False.txt  main.cpp  perftestResultsConverter.js  simple_voting_v2_1_False.txt  train_model_dump.txt  train_model_dump1.txt  voter_model_2_2_False.txt  voter_model_2_2_True.txt  voting_v2_1_2_True_dump.txt  voting_v2_2_2_False_dump.txt  voting_v2_2_2_True_dump.txt  voting_v2_3_2_False_dump.txt  (+3 more)
Logics/: AtlModel.cpp  AtlModel.h
Models/: ActionTransition.cpp  ActionTransition.h  BridgeModel.cpp  BridgeModel.h  ModelGenerator.cpp  ModelGenerator.h  ParallelModel.cpp  ParallelModel.hpp  SeleneModel.cpp  SeleneModel.h  SimpleModel.cpp  SimpleModel.h  State.cpp  State.h  Transition.cpp  Transition.h
TestModels/: Model01.cpp  Model02.cpp  Model03.cpp  Model04.cpp  Model05.cpp  Model06.cpp  Model07.cpp  Model08.cpp  Model09.cpp  Model10.cpp  TreeModelGenerator.cpp
Tools/: DisjointUnion.cpp  DisjointUnion.h  SetTools.cpp  SetTools.h  StringTools.cpp  StringTools.h
results/: BridgeModel_13_1_test_13-10-2017_00:32:39_Linux.txt  BridgeModel_4_4_test.txt  (+207 more)
(+596 files in other folders)
